# oc-master-control

./: .devcontainer.json  Cargo.toml  Dockerfile  Dockerfile.devcontainer  Dockerfile.release  diesel.toml  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
.github/workflows/: docker-image.yml
lua-client/: app.lua  updater.lua
migrations/2024-08-10-074722_create-clients/: up.sql
migrations/2024-08-12-014217_create_clients/: down.sql  up.sql
migrations/2024-08-13-114405_create_client_logs/: down.sql  up.sql
src/: api.rs  auth.rs  db.rs  error.rs  hx_middleware.rs  layout.rs  lib.rs  main.rs  models.rs  schema.rs
src/database/: mod.rs  models.rs  schema.rs
src/routes/: api.rs  auth.rs  client_routes.rs  mod.rs  stats.rs
static/: script.js  style.css
static/client/: MANIFEST  app.lua  rui.lua  updater.lua  ws_client.lua
static/client/usr/lib/: commands.lua  rui.lua  util.lua  ws.lua
static/client/websocket/: ws_component_layer.lua  ws_tools.lua
